# scas

./: .build.yml  .gitignore  CMakeLists.txt  Makefile  README.md  generate-tables.sh  log.c  main.c  mk.rc  mkfile  run_tests.sh  sass.1  sass.1.txt  scas.1.txt  scas.c  scasdump.1.txt  scass.1.txt  scdump.1.txt  scdump.c  scwrap.c  test.c
assemble/: assemble.h
assembler/: assembler.c  assembler.h  directives.c  directives.h  instructions.c  instructions.h  match.c  match.h  privatize.c
common/: errors.c  errors.h  expression.c  expression.h  format.c  functions.c  functions.h  instructions.c  io.c  list.c  list.h  log.c  log.h  match.c  md5.c  objects.c  objects.h  operators.c  operators.h  readline.c  readline.h  runtime.c  runtime.h  stack.c  stack.h  stringop.c  stringop.h
doc/: scas.1.scdoc  scas.1.txt  scdump.1.scdoc  scwrap.1.scdoc  sdb  sobj
include/: 8xp.h  assembler.h  bin.h  directives.h  enums.h  errors.h  expression.h  format.h  functions.h  hashtable.h  instructions.h  io.h  linker.h  list.h  log.h  match.h  md5.h  merge.h  objects.h  operators.h  plan9.h  privatize.h  readline.h  runtime.h  stack.h  stringop.h
linker/: 8xp.c  bin.c  linker.c  linker.h  merge.c  merge.h  plan9.c
meta/: debug.h  enums.h  log.c  log.h  object.h  runtime.c  runtime.h
scas/: flags.c  flags.h  generated.h  main.c
scasdump/: main.c
scass/: main.c
scdump/: main.c
scwrap/: main.c
tables/: amd64.tab  arm64.tab  generate.c  z80.tab  z80.tab1  z80.tab2
tests/example_test/: test.asm
